[metadata]
name = restalchemy
summary = REST HTTP Abstraction Library
description-file =
    README.rst
author = Eugene Frolov
author-email = eugene@frolov.net.ru
home-page = http://restalchemy.synapse.net.ru/
classifier =
    Environment :: restalchemy
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.12

[entry_points]
console_scripts =
    ra-new-migration = restalchemy.cmd.new_migration:main
    ra-apply-migration = restalchemy.cmd.apply_migration:main
    ra-rollback-migration = restalchemy.cmd.rollback_migration:main
    ra-rename-migrations = restalchemy.cmd.rename_migrations:main

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
